First API Documentation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<p class="pitch">
 			<b>Rustic</b> is a Crate (Rust<span class="asterisk">*</span> Library) providing miscellaneous utility classes.
 			<br/>
-			<a href="http://github.com/Chris-Pe/Rustic">Show me more!</a>
+			<a href="doc/Rustic/index.html">Show me more!</a>
 			</p>
 		</div>
 		</div>
