--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   
   <body class="container">
+	<a href="http://github.com/chris-pe/Rustic"><img class="ribbon" style="display: none" src="logos/forkme.png" alt="Fork me on GitHub"></a>
 	<header>
 	</header>
         <div class="row install-row">
@@ -17,7 +18,7 @@
 			<p class="pitch">
 			<b>Rustic</b> is a Crate (Rust<span class="asterisk">*</span> Library) providing miscellaneous utility classes.
 			<br/>
-			<a href="doc/rustic/index.html">Show me more!</a>
+			<a href="http://www.rust-ci.org/chris-pe/Rustic/doc/rustic/">Show me more!</a>
 			</p>
 		</div>
 		</div>
